fdo#59084: Sync dimension members after reloading the group data.

Else the syncing would end up syncing to the older version of the
group data before the reload, which (as you can see in the bug report)
may lead to a crash.

Change-Id: Ibd674a97a59205e5e28efd007f8857731e8df4d3
Reviewed-on: https://gerrit.libreoffice.org/1635
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>